add banner section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
             <a href="#" class="btn">Sign Up</a>
         </div>
     </nav>
+    
+
+    <!-- Banner Section -->
+    <section class="banner">
+        <div class="container">
+            <div class="banner-content">
+                <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+                <a href="#" class="btn">Stay Focused</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
