add action section

--- a/index.html
+++ b/index.html
@@ -31,5 +31,19 @@
             </div>
         </div>
     </section>
+
+    <!-- Action Section -->
+    <section class="action">
+        <div class="container">
+            <div class="action-content">
+                <h2 class="action h2">See It in Action</h2>
+                <p class="action p">Explore the live preview and imagine your brand in this bold new look.</p>
+                <a href="#" class="btn">Launch Live Preview</a>
+            </div>
+            <div class="action-image">
+                <img src="/Assets/wc-mini.png" alt="Webflow Conf 2022">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
