--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         </div>
     </nav>
     
-
     <!-- Banner Section -->
     <section class="banner">
         <div class="container">
@@ -42,6 +41,27 @@
             </div>
             <div class="action-image">
                 <img src="/Assets/wc-mini.png" alt="Webflow Conf 2022">
+            </div>
+        </div>
+    </section>
+
+    <!-- Productive Users Section -->
+    <section class="productive-users">
+        <div class="container box">
+            <h2>Joined Thousands of Productive Users</h2>
+            <div class="stats">
+                <div class="stat-item inter-normal">
+                    <h3>50K</h3>
+                    <p>Active Users</p>
+                </div>
+                <div class="stat-item inter-normal">
+                    <h3>2M+</h3>
+                    <p>Focus Sessions</p>
+                </div>
+                <div class="stat-item inter-normal">
+                    <h3>95%</h3>
+                    <p>Satisfaction Rate</p>
+                </div>
             </div>
         </div>
     </section>
