--- a/index.html
+++ b/index.html
@@ -1,69 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet">
 
-    <link rel="stylesheet" href="/styles/navbar.css">
-    <title>B12A01-landing-launchpad</title>
-</head>
-<body class="raleway-normal">
-    <!-- Navbar Section -->
-    <nav class="navbar">
-        <div class="container">
-            <h3 class="inter-normal"><a href="#" class="logo">LOGO</a></h3>
-            <a href="#" class="btn">Sign Up</a>
-        </div>
-    </nav>
-    
-    <!-- Banner Section -->
-    <section class="banner">
-        <div class="container">
-            <div class="banner-content">
-                <h1>Cool Dark UI Template for Webflow Agencies!</h1>
-                <a href="#" class="btn">Stay Focused</a>
+        <link rel="stylesheet" href="/styles/navbar.css">
+        <title>B12A01-landing-launchpad</title>
+    </head>
+    <body class="raleway-normal">
+        <!-- Navbar Section -->
+        <nav class="navbar">
+            <div class="container">
+                <h3 class="inter-normal"><a href="#" class="logo">LOGO</a></h3>
+                <a href="#" class="btn">Sign Up</a>
             </div>
-        </div>
-    </section>
+        </nav>
 
-    <!-- Action Section -->
-    <section class="action">
-        <div class="container">
-            <div class="action-content">
-                <h2 class="action h2">See It in Action</h2>
-                <p class="action p">Explore the live preview and imagine your brand in this bold new look.</p>
-                <a href="#" class="btn">Launch Live Preview</a>
-            </div>
-            <div class="action-image">
-                <img src="/Assets/wc-mini.png" alt="Webflow Conf 2022">
-            </div>
-        </div>
-    </section>
-
-    <!-- Productive Users Section -->
-    <section class="productive-users">
-        <div class="container box">
-            <h2>Joined Thousands of Productive Users</h2>
-            <div class="stats">
-                <div class="stat-item inter-normal">
-                    <h3>50K</h3>
-                    <p>Active Users</p>
-                </div>
-                <div class="stat-item inter-normal">
-                    <h3>2M+</h3>
-                    <p>Focus Sessions</p>
-                </div>
-                <div class="stat-item inter-normal">
-                    <h3>95%</h3>
-                    <p>Satisfaction Rate</p>
+        <!-- Banner Section -->
+        <section class="banner">
+            <div class="container">
+                <div class="banner-content">
+                    <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+                    <a href="#" class="btn">Stay Focused</a>
                 </div>
             </div>
-        </div>
-    </section>
-</body>
+        </section>
+
+        <!-- Action Section -->
+        <section class="action">
+            <div class="container">
+                <div class="action-content">
+                    <h2 class="action h2">See It in Action</h2>
+                    <p class="action p">Explore the live preview and imagine
+                        your brand in this bold new look.</p>
+                    <a href="#" class="btn">Launch Live Preview</a>
+                </div>
+                <div class="action-image">
+                    <img src="/Assets/wc-mini.png" alt="Webflow Conf 2022">
+                </div>
+            </div>
+        </section>
+
+        <!-- Productive Users Section -->
+        <section class="productive-users">
+            <div class="container box">
+                <h2>Joined Thousands of Productive Users</h2>
+                <div class="stats">
+                    <div class="stat-item inter-normal">
+                        <h3>50K</h3>
+                        <p>Active Users</p>
+                    </div>
+                    <div class="stat-item inter-normal">
+                        <h3>2M+</h3>
+                        <p>Focus Sessions</p>
+                    </div>
+                    <div class="stat-item inter-normal">
+                        <h3>95%</h3>
+                        <p>Satisfaction Rate</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Review Section with Anchor Tag Stars -->
+        <section class="reviews">
+            <div class="container">
+                <h2 class="raleway-normal">What our users say</h2>
+
+                <div class="review-container">
+                    <!-- Review Card 1 -->
+                    <div class="review-card">
+                        <div class="stars">
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                        </div>
+                        <h1>Loved by Designers</h1>
+                        <p class="review-text">This template has completely
+                            transformed my workflow.</p>
+                        <div class="reviewer">
+                            <img
+                                src="https://randomuser.me/api/portraits/women/44.jpg"
+                                alt="Sarah Johnson">
+                            <div class="reviewer-info">
+                                <h4>Sarah Johnson</h4>
+                                <p>July 5, 2025</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Review Card 2 -->
+                    <div class="review-card">
+                        <div class="stars">
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                        </div>
+                        <h1>Loved by Designers</h1>
+                        <p class="review-text">Great design and easy to
+                            customize. Saved me dozens of hours.</p>
+                        <div class="reviewer">
+                            <img
+                                src="https://randomuser.me/api/portraits/men/32.jpg"
+                                alt="Michael Chen">
+                            <div class="reviewer-info">
+                                <h4>Michael Chen</h4>
+                                <p>June 28, 2025</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Review Card 3 -->
+                    <div class="review-card">
+                        <div class="stars">
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="/Assets/icon-star.png" class="star">★</a>
+                        </div>
+                        <h1>Loved by Designers</h1>
+                        <p class="review-text">The perfect solution for our
+                            agency. Clients love the modern look.</p>
+                        <div class="reviewer">
+                            <img
+                                src="https://randomuser.me/api/portraits/women/68.jpg"
+                                alt="Emily Rodriguez">
+                            <div class="reviewer-info">
+                                <h4>Emily Rodriguez</h4>
+                                <p>June 15, 2025</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
