--- a/index.html
+++ b/index.html
@@ -146,5 +146,34 @@
                 </div>
             </div>
         </section>
+
+        <!-- Newsletter Section -->
+        <section class="newsletter">
+            <div class="container">
+                <div class="newsletter-content">
+                    <h2 class="raleway-normal">Let's Get in Touch</h2>
+                </div>
+                <div class="newsletter-form">
+                    <form>
+                        <div class="form-group">
+                            <label for="email" class="inter-normal">Email</label>
+                            <input type="email" class="inter-normal" id="email"
+                                placeholder="example@email.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="name" class="inter-normal">Name</label>
+                            <input type="text" class="inter-normal" id="name"
+                                placeholder="full name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message" class="inter-normal">Message</label>
+                            <textarea class="inter-normal" id="message"
+                                placeholder="write your message...."></textarea>
+                        </div>
+                        <button type="submit" class="form-btn raleway-normal">Get in Touch</button>
+                    </form>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
