add touch section

--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
             </div>
         </section>
 
-        <!-- Newsletter Section -->
-        <section class="newsletter">
+        <!-- Touch Section -->
+        <section class="Touch">
             <div class="container">
-                <div class="newsletter-content">
+                <div class="Touch-content">
                     <h2 class="raleway-normal">Let's Get in Touch</h2>
                 </div>
-                <div class="newsletter-form">
+                <div class="Touch-form">
                     <form>
                         <div class="form-group">
                             <label for="email" class="inter-normal">Email</label>
