--- a/index.html
+++ b/index.html
@@ -175,5 +175,19 @@
                 </div>
             </div>
         </section>
+
+        <!-- Footer Section -->
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-logo inter-normal">LOGO</div>
+                <p class="footer-p">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+                <div class="footer-links">
+                    <a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">How it Works</a>
+                    <a href="#">Services</a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
