re-arrange the code

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet">
@@ -43,7 +41,7 @@
                     <a href="#" class="btn">Launch Live Preview</a>
                 </div>
                 <div class="action-image">
-                    <img src="/Assets/wc-mini.png" alt="Webflow Conf 2022">
+                    <img src="/Assets/wc-mini.png" alt="">
                 </div>
             </div>
         </section>
@@ -69,7 +67,7 @@
             </div>
         </section>
 
-        <!-- Review Section with Anchor Tag Stars -->
+        <!-- Review Section -->
         <section class="reviews">
             <div class="container">
                 <h2 class="raleway-normal">What our users say</h2>
@@ -89,7 +87,7 @@
                             transformed my workflow.</p>
                         <div class="reviewer">
                             <img
-                                src="https://randomuser.me/api/portraits/women/44.jpg"
+                                src="/Assets/avatar.png"
                                 alt="Sarah Johnson">
                             <div class="reviewer-info">
                                 <h4>Sarah Johnson</h4>
@@ -112,7 +110,7 @@
                             customize. Saved me dozens of hours.</p>
                         <div class="reviewer">
                             <img
-                                src="https://randomuser.me/api/portraits/men/32.jpg"
+                                src="/Assets/avatar.png"
                                 alt="Michael Chen">
                             <div class="reviewer-info">
                                 <h4>Michael Chen</h4>
@@ -135,7 +133,7 @@
                             agency. Clients love the modern look.</p>
                         <div class="reviewer">
                             <img
-                                src="https://randomuser.me/api/portraits/women/68.jpg"
+                                src="/Assets/avatar.png"
                                 alt="Emily Rodriguez">
                             <div class="reviewer-info">
                                 <h4>Emily Rodriguez</h4>
@@ -184,7 +182,7 @@
                 <div class="footer-links">
                     <a href="#">Home</a>
                     <a href="#">About</a>
-                    <a href="#">How it Works</a>
+                    <a href="#">How it works</a>
                     <a href="#">Services</a>
                 </div>
             </div>
