Fix image paths

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet">
 
-        <link rel="stylesheet" href="/Styles/navbar.css">
+        <link rel="stylesheet" href="Styles/navbar.css">
         <title>B12A01-landing-launchpad</title>
     </head>
     <body class="raleway-normal">
@@ -41,7 +41,7 @@
                     <a href="#" class="btn">Launch Live Preview</a>
                 </div>
                 <div class="action-image">
-                    <img src="/Assets/wc-mini.png" alt="">
+                    <img src="Assets/wc-mini.png" alt="">
                 </div>
             </div>
         </section>
@@ -76,18 +76,18 @@
                     <!-- Review Card 1 -->
                     <div class="review-card">
                         <div class="stars">
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
                         </div>
                         <h1>Loved by Designers</h1>
                         <p class="review-text">This template has completely
                             transformed my workflow.</p>
                         <div class="reviewer">
                             <img
-                                src="/Assets/avatar.png"
+                                src="Assets/avatar.png"
                                 alt="Sarah Johnson">
                             <div class="reviewer-info">
                                 <h4>Sarah Johnson</h4>
@@ -99,18 +99,18 @@
                     <!-- Review Card 2 -->
                     <div class="review-card">
                         <div class="stars">
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
                         </div>
                         <h1>Loved by Designers</h1>
                         <p class="review-text">Great design and easy to
                             customize. Saved me dozens of hours.</p>
                         <div class="reviewer">
                             <img
-                                src="/Assets/avatar.png"
+                                src="Assets/avatar.png"
                                 alt="Michael Chen">
                             <div class="reviewer-info">
                                 <h4>Michael Chen</h4>
@@ -122,18 +122,18 @@
                     <!-- Review Card 3 -->
                     <div class="review-card">
                         <div class="stars">
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
-                            <a href="/Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="Assets/icon-star.png" class="star">★</a>
                         </div>
                         <h1>Loved by Designers</h1>
                         <p class="review-text">The perfect solution for our
                             agency. Clients love the modern look.</p>
                         <div class="reviewer">
                             <img
-                                src="/Assets/avatar.png"
+                                src="Assets/avatar.png"
                                 alt="Emily Rodriguez">
                             <div class="reviewer-info">
                                 <h4>Emily Rodriguez</h4>
