Fix star icon paths

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                     <!-- Review Card 1 -->
                     <div class="review-card">
                         <div class="stars">
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
                         </div>
                         <h1>Loved by Designers</h1>
                         <p class="review-text">This template has completely
@@ -97,11 +97,11 @@
                     <!-- Review Card 2 -->
                     <div class="review-card">
                         <div class="stars">
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
                         </div>
                         <h1>Loved by Designers</h1>
                         <p class="review-text">Great design and easy to
@@ -120,11 +120,11 @@
                     <!-- Review Card 3 -->
                     <div class="review-card">
                         <div class="stars">
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
-                            <a href="Assets/icon-star.png" class="star">★</a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
+                            <a href="#" class="star"><img src="Assets/icon-star.png" alt=""></a>
                         </div>
                         <h1>Loved by Designers</h1>
                         <p class="review-text">The perfect solution for our
